Fix broken CSS indexes

--- a/src/views/shared/css/theme-fixes.styl
+++ b/src/views/shared/css/theme-fixes.styl
@@ -18,5 +18,5 @@
 // Force most stacking contexts to be lower than our stacking
 // context. Those that are not (because other plugins may use the
 // z-index) must be excluded manually above.
-*:not(.image-display)
-  z-index 0
+// *:not(.image-display)
+//   z-index 0
